fix: overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .App {
+    overflow-x: hidden;
     color: white;
 }
